# libsodium

./: CMakeLists.txt
src/: CMakeLists.txt
src/libsodium/: CMakeLists.txt
src/libsodium/include/: CMakeLists.txt
src/libsodium/include/sodium/: CMakeLists.txt
